--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.rbc
 *.sassc
+*.orig
 .sass-cache
 capybara-*.html
 .rspec
@@ -16,5 +17,5 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 .project
-config/initializers/secret_token.rb
-config/database.yml
+/config/initializers/secret_token.rb
+/config/database.yml
