--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: BookThatGrow_development
+  database: books_that_grow_v1_0_1
   pool: 5
   host: 192.168.10.37
   username: postgres
