changes in database.yml file

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ production:
   encoding: unicode
   database: books_that_grow_v1_0_1
   pool: 5
-  host: 54.204.45.104
+  host: localhost
   username: postgres
   password: cueepub86
   port: 5432 
