--- a/config/database.yml
+++ b/config/database.yml
@@ -3,15 +3,23 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: books_that_grow_v1_0_1
+#   pool: 5
+#   host: localhost
+#   username: postgres
+#   password: cueepub86  
 development:
   adapter: postgresql
   encoding: unicode
   database: books_that_grow_v1_0_1
   pool: 5
-  host: localhost
+  host: 192.168.10.37
   username: postgres
-  password: cueepub86  
-  
+  password: pg2014  
+  port: 5433
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
