added new credentials for production DB according to heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -27,9 +27,9 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: books_that_grow_v1_0_1
+  database: df5hfjsf4t9d78
   pool: 5
-  host: 54.204.45.104
-  username: postgres
-  password: cueepub86
+  host: ec2-54-225-101-124.compute-1.amazonaws.com
+  username: nphajysesavnzm
+  password: uQLzyAN26wz9er3DwhHpmnXuUq
   port: 5432 
