--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: rails-btg
+  database: books_that_grow_v1_0_1
   pool: 5
   host: 192.168.10.37
   username: postgres
@@ -37,7 +37,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: books_that_grow_v1_0_1
+  database: rails_app
   pool: 5
   host: localhost
   username: postgres
