--- a/config/database.yml
+++ b/config/database.yml
@@ -37,9 +37,19 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: rails_app
+  database: df5hfjsf4t9d78
   pool: 5
-  host: localhost
-  username: postgres
-  password: cuelogic
+  host: ec2-54-225-101-124.compute-1.amazonaws.com
+  username: nphajysesavnzm
+  password: uQLzyAN26wz9er3DwhHpmnXuUq
+  port: 5432
+  
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: rails_app
+#   pool: 5
+#   host: localhost
+#   username: postgres
+#   password: cuelogic
   
