--- a/config/database.yml
+++ b/config/database.yml
@@ -4,24 +4,15 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 
-# development:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: books-that-grow-migrations
-#   pool: 5
-#   host: 192.168.10.37
-#   username: postgres
-#   password: pg2014  
-#   port: 5433
-
 development:
   adapter: postgresql
   encoding: unicode
   database: books-that-grow-migration
   pool: 5
-  host: localhost
-  username: apple
-  password: cuelogic
+  host: 192.168.10.37
+  username: postgres
+  password: pg2014
+  port: 5433
   
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -32,13 +23,13 @@ test:
   database: BookThatGrow_test
   pool: 5
   host: localhost
-  username: apple
+  username: postgres
   password: cuelogic
   
 production:
   adapter: postgresql
   encoding: unicode
-  database: books_that_grow_v1_0_1
+  database: rails_app
   pool: 5
   host: localhost
   username: postgres
