--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: books-that-grow-migration
+  database: btg_mig_live_1
   pool: 5
   host: 192.168.10.37
   username: postgres
