--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: books_that_grow_migration_v1_0_2
+  database: btg-migration_v_1_0_2
   pool: 5
   host: localhost
   username: postgres
