staging db details

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,15 @@ test:
   username: postgres
   password: cuelogic
   
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: btg-migration_v_1_0_4
+  pool: 5
+  host: localhost
+  username: postgres
+  password: cuelogic
+
 production:
   adapter: postgresql
   encoding: unicode
