--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@ test:
 staging:
   adapter: postgresql
   encoding: unicode
-  database: btg-migration_v_1_0_6
+  database: btg-staging_v_1_0_1
   pool: 5
   host: localhost
   username: postgres
