--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: btg_mig_live_1
+  database: migrate_btg
   pool: 5
   host: 192.168.10.37
   username: postgres
@@ -29,7 +29,7 @@ test:
 staging:
   adapter: postgresql
   encoding: unicode
-  database: btg-staging_v_1_0_2
+  database: btg-staging_v_1_0_3
   pool: 5
   host: localhost
   username: postgres
