--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: migrate_btg
+  database: migrate_btg_2
   pool: 5
   host: 192.168.10.37
   username: postgres
